0.3
~~~
o -P is now fully implemented and is dynamically toggled with 'p'
o Show the I/O priority (http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=blob_plain;f=Documentation/block/ioprio.txt;hb=HEAD)

0.2.1
~~~~~
o UTF-8 strings are now correctly handled

0.2
~~~

o Misconfigured terminals (TERM=xterm-color) are tolerated
o Added the --only option to only show processes or threads actually doing I/O
o Typing 'o' dynamically toggles the --only option
o Cosmetic fixes as well as minor bug fixes
o Re-organized code to import vanilla pynl80211
o Added workaround KERNBUG display in -P

0.1
~~~

o First release