@@ -1,7 +1,8 @@
 0.3
 ~~~
 o -P is now fully implemented and is dynamically toggled with 'p'
-o Show the I/O priority (http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=blob_plain;f=Documentation/block/ioprio.txt;hb=HEAD)
+o Show the I/O priority
+o Added the --accumulated option
 
 0.2.1
 ~~~~~
